(INSTALL): Update documentation to match the current install scheme. Conitnued work for E923-010.

--- a/makefile.conf
+++ b/makefile.conf
@@ -9,8 +9,9 @@
 
 
 ##############################################################################
-# AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
-# the install directory.
+# AWS will be installed under $(INSTALL). Update this variable to point to
+# the install directory. You probably want to set this to the GNAT root
+# directory to have AWS project files automatically available.
 INSTALL	 = $(HOME)
 
 ##############################################################################
