(SHARED): New variable, set to false. This is to control the AWS library  kind. If set to true it will build an AWS shared library. Work for D507-003.

--- a/makefile.conf
+++ b/makefile.conf
@@ -15,6 +15,12 @@
 INSTALL	 = $(HOME)
 
 ##############################################################################
+# Set to true if AWS must be built as a shared library. If SHARED is set to
+# false AWS is built as a static library.
+#
+SHARED	= false
+
+##############################################################################
 # XMLADA optional, needed if you want to build SOAP's AWS support. Uncomment
 # line above to activate XML/Ada support, you must also set ADA_PROJECT_PATH
 # to point to the XML/Ada project files if not installed in the standard
