--- a/tools/makefile
+++ b/tools/makefile
@@ -29,8 +29,7 @@ setup: $(GEN)
 
 build:
 	$(GNATMAKE) -Ptools -XBuild=${PRJ_BUILD} \
-		-XXMLADA=${PRJ_XMLADA} -XASIS=${PRJ_ASIS} -largs -laws
-# ??? "-largs -laws" for workaround GCC 3.4.2 project link sequence bug.
+		-XXMLADA=${PRJ_XMLADA} -XASIS=${PRJ_ASIS}
 
 clean:
 	$(RM) -fr ../$(BDIR)/tools
