--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -57,6 +57,8 @@ b~dispatch_method.adb
 b~dispatch_method.ads
 b~dispatch_vh.adb
 b~dispatch_vh.ads
+b~dm.adb
+b~dm.ads
 b~dummy.adb
 b~dummy.ads
 b~eres.adb
@@ -279,6 +281,7 @@ dispatch_method
 dispatch_method.res
 dispatch_vh
 dispatch_vh.res
+dm.res
 dummy
 dummy.res
 dummy.tmp
