(WSDL_ATESTS): Add test_wsdl6. Work for EB29-007.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -48,8 +48,8 @@ XMLADA_SRC     = ${subst \,/,${dir $(XMLADA_UNICODE)}}
 OTH_TESTS     := $(OTH_TESTS) check_mem
 WSDL_TESTS     = test_wsdl test_wsdl2 test_wsdl4 test_wsdl6 \
 	interoplab_main1 googlesearch datafeed_service anytype
-WSDL_ATESTS    = test_wsdl3 test_wsdl5
-WSDL2AWS_TESTS = wsdl_parse_1 wsdl_parse_2 wsdl_parse_3	wsdl_parse_4
+WSDL_ATESTS    = test_wsdl3 test_wsdl5 test_wsdl7
+WSDL2AWS_TESTS = wsdl_parse_1 wsdl_parse_2 wsdl_parse_3 wsdl_parse_4
 endif
 
 ifdef ASIS
