(setup): Fix syntax for the conditionals (use curly brackets).

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -240,23 +240,23 @@ endif
 ifeq (${XMLADA}, true)
 	-$(GREP) "\[SOAP\]" all_mains.lst >> s_mains.lst
 endif
-ifeq ($(SOCKET),ssl)
+ifeq (${SOCKET}, ssl)
 	-$(GREP) "\[SSL\]" all_mains.lst >> s_mains.lst
 endif
 ifeq (${XMLADA}, true)
  ifdef ASIS
 	-$(GREP) "\[ASIS+SOAP\]" all_mains.lst >> s_mains.lst
-  ifeq ($(SOCKET),ssl)
+  ifeq (${SOCKET}, ssl)
 	-$(GREP) "\[ASIS+SOAP+SSL\]" all_mains.lst >> s_mains.lst
   endif
  else
-  ifeq ($(SOCKET),ssl)
+  ifeq (${SOCKET}, ssl)
 	-$(GREP) "\[SOAP+SSL\]" all_mains.lst >> s_mains.lst
   endif
  endif
 else
  ifdef ASIS
-  ifeq ($(SOCKET),ssl)
+  ifeq (${SOCKET}, ssl)
 	-$(GREP) "\[ASIS+SSL\]" all_mains.lst >> s_mains.lst
   endif
  endif
