(SOCKET): Document the new openssl and gnutls values.

--- a/makefile.conf
+++ b/makefile.conf
@@ -60,8 +60,8 @@ SHARED	= false
 # AWS. To build AWS's demos will SSL support you need to set SOCKET to ssl, in
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
 # are distributed on Windows platforms therefore the SSL mode is the default
-# on this platform.
-# SOCKET = [ssl/std]
+# on this platform. (note that below ssl and openssl are aliases).
+# SOCKET = [std/ssl/openssl/gnutls]
 #
 ifeq (${OS}, Windows_NT)
 SOCKET=ssl
