($(ASIS_TESTS)): Pass the AWS project file to ADA2WSDL. Fixes issue with naming conventions introduced recently. -- Add support for project files to Ada2WSDL. A new option (-Pproj) is supported and the ASIS lib is configured to use GNATMAKE instead of GCC. Work for F328-005.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -188,8 +188,7 @@ $(WSDL2AWS_TESTS): force
 
 $(ASIS_TESTS): force
 	echo Preparing $@
-	$(ADA2WSDL) -q -f $(INCLUDES) -I../include -I../include/ai302 \
-		-I../soap -I../src -I../xsrc -I../ssl -I$(XMLADA_SRC) \
+	$(ADA2WSDL) -q -f $(INCLUDES) -P../aws \
 		-a http://localhost:770`echo $@ | cut -c 6-` $@.ads -o $@.wsdl
 	$(WSDL2AWS) -q -f -cb -types $@ $@.wsdl
 
