--- a/regtests/makefile
+++ b/regtests/makefile
@@ -217,12 +217,12 @@ tres: force
 
 check_mem: force
 	echo -n "Running  " check_mem
-	./check_mem 2 1888 > check_mem.res
-	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) 2 1248 > check_mem.run1
+	./check_mem 2 > check_mem.res
+	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) > check_mem.run1
 	grep "   Final" check_mem.run1 > run1
 	echo ",  run it again"
-	./check_mem 30 1889 >> check_mem.res
-	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) 30 1249 > check_mem.run2
+	./check_mem 30 >> check_mem.res
+	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) > check_mem.run2
 	grep "   Final" check_mem.run2 > run2
 	-diff -c -w run1 run2 1>> alldifs 2>> alldifs
 
