--- a/makefile.conf
+++ b/makefile.conf
@@ -29,7 +29,7 @@ SHARED	= false
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
 # used to create a WSDL document from an Ada spec. Uncomment line above to
-# activate ASIS support. you must also set ADA_PROJECT_PATH to point to the
+# activate ASIS support. You must also set ADA_PROJECT_PATH to point to the
 # ASIS project files if not installed in the standard location.
 #
 # If you activate ASIS you also need to activate XMLADA above.
