Set svn:externals to point to templates_parser directory

--- a/regtests/makefile.lst
+++ b/regtests/makefile.lst
@@ -1,1 +1,148 @@
-
+TESTS=\
+accs.adb \
+afile.adb \
+append.adb \
+attachment.adb \
+auth1.adb \
+auth2.adb \
+compress.adb \
+ctab.adb \
+ctable.adb \
+dirop.adb \
+dm.adb \
+dummy.adb \
+eres.adb \
+file.adb \
+file2.adb \
+generate.adb \
+get_post.adb \
+head.adb \
+hload.adb \
+hostip.adb \
+huge_response.adb \
+hval.adb \
+line_status.adb \
+moved.adb \
+multiple.adb \
+nbconn.adb \
+no_param.adb \
+nonce.adb \
+once.adb \
+param.adb \
+partial.adb \
+redirect.adb \
+sback.adb \
+sdig.adb \
+server_info.adb \
+sessions.adb \
+sessions2.adb \
+sessions3.adb \
+sessions4.adb \
+sessions5.adb \
+shutdown.adb \
+simple.adb \
+smem.adb \
+smtp.adb \
+sock1.adb \
+sock2.adb \
+sock3.adb \
+sockext.adb \
+sockover.adb \
+sockto.adb \
+sp.adb \
+spair.adb \
+spg.adb \
+split1.adb \
+sto.adb \
+stream_response.adb \
+strm.adb \
+tclientto.adb \
+tcom.adb \
+test_hotplug.adb \
+test_net_log.adb \
+test_templates_if.adb \
+tgetparam.adb \
+timer.adb \
+tmem.adb \
+tmime.adb \
+tpc.adb \
+tres2.adb \
+turl.adb \
+turl2.adb \
+turl3.adb \
+turl4.adb \
+unexph.adb \
+unexph2.adb \
+upload.adb \
+upload4.adb \
+upload5.adb \
+user_sock.adb \
+wait.adb \
+wait2.adb \
+zapp.adb \
+zbig.adb \
+zfile.adb \
+zopen.adb \
+zres.adb \
+zstrm.adb \
+zstrm2.adb \
+anytype.adb \
+datafeed_service.adb \
+disp_soap.adb \
+googlesearch.adb \
+interoplab_main1.adb \
+soap1.adb \
+soap2.adb \
+soap3.adb \
+soap4.adb \
+soap5.adb \
+soap6.adb \
+soap7.adb \
+test_soap.adb \
+test_soap2.adb \
+test_soap3.adb \
+test_soap4.adb \
+test_soap5.adb \
+test_speed.adb \
+test_wsdl.adb \
+test_wsdl2.adb \
+test_wsdl3.adb \
+test_wsdl4.adb \
+test_wsdl5.adb \
+test_wsdl6.adb \
+test_wsdl7.adb \
+testxml.adb \
+workorder.adb \
+xmlt.adb \
+accs_sec.adb \
+afile_sec.adb \
+append_sec.adb \
+cert.adb \
+hload_sec.adb \
+huge_response_sec.adb \
+nbconn_sec.adb \
+plain2ssl.adb \
+smem_sec.adb \
+sock2_sec.adb \
+sock3_sec.adb \
+sockext_sec.adb \
+sockover_sec.adb \
+spair_sec.adb \
+spg_sec.adb \
+ssback.adb \
+sslcfg.adb \
+ssockto.adb \
+ssp.adb \
+ssto.adb \
+tsgetparam.adb \
+wait2_sec.adb \
+wait_sec.adb \
+test_soap_hotplug.adb \
+wsdl_1_main.adb \
+wsdl_2_main.adb \
+wsdl_3_main.adb \
+wsdl_4_main.adb \
+wsdl_5_main.adb \
+wsdl_6_main.adb \
+wsdl_7_main.adb \
+wsdl_8_main.adb \
