--- a/include/zlib/makefile
+++ b/include/zlib/makefile
@@ -42,17 +42,17 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-adler32.o: zlib.h zconf.h
-compress.o: zlib.h zconf.h
-crc32.o: crc32.h zlib.h zconf.h
-deflate.o: deflate.h zutil.h zlib.h zconf.h
-example.o: zlib.h zconf.h
-gzio.o: zutil.h zlib.h zconf.h
-inffast.o: zutil.h zlib.h zconf.h inftrees.h inflate.h inffast.h
-inflate.o: zutil.h zlib.h zconf.h inftrees.h inflate.h inffast.h
-infback.o: zutil.h zlib.h zconf.h inftrees.h inflate.h inffast.h
-inftrees.o: zutil.h zlib.h zconf.h inftrees.h
-minigzip.o: zlib.h zconf.h
-trees.o: deflate.h zutil.h zlib.h zconf.h trees.h
-uncompr.o: zlib.h zconf.h
-zutil.o: zutil.h zlib.h zconf.h
+adler32.o: zlib.h zconf.h zlibdefs.h
+compress.o: zlib.h zconf.h zlibdefs.h
+crc32.o: crc32.h zlib.h zconf.h zlibdefs.h
+deflate.o: deflate.h zutil.h zlib.h zconf.h zlibdefs.h
+example.o: zlib.h zconf.h zlibdefs.h
+gzio.o: zutil.h zlib.h zconf.h zlibdefs.h
+inffast.o: zutil.h zlib.h zconf.h zlibdefs.h inftrees.h inflate.h inffast.h
+inflate.o: zutil.h zlib.h zconf.h zlibdefs.h inftrees.h inflate.h inffast.h inffixed.h
+infback.o: zutil.h zlib.h zconf.h zlibdefs.h inftrees.h inflate.h inffast.h inffixed.h
+inftrees.o: zutil.h zlib.h zconf.h zlibdefs.h inftrees.h
+minigzip.o: zlib.h zconf.h zlibdefs.h
+trees.o: deflate.h zutil.h zlib.h zconf.h zlibdefs.h trees.h
+uncompr.o: zlib.h zconf.h zlibdefs.h
+zutil.o: zutil.h zlib.h zconf.h zlibdefs.h
