* makefile:   (GALL_OPTIONS): Add I_INC and I_CPN variables.   (install): Install templates2ada tool.
* tools/makefile:
  (setup): Use I_INC and I_CPN variables to generate
  the ada2wsdl-options.

Continued work for F505-010.

--- a/tools/makefile
+++ b/tools/makefile
@@ -15,9 +15,9 @@ ada2wsdl-options.adb: force
 	echo "   procedure Set_Default is" >> ada2wsdl-options.adb
 	echo "   begin" >> ada2wsdl-options.adb
 	echo "      pragma Style_Checks (Off);" >> ada2wsdl-options.adb
-	echo "      Parser.Add_Option (\"-I"$(INSTALL)"/AWS/components\");" \
+	echo "      Parser.Add_Option (\"-I"$(I_CPN)"\");" \
 		>> ada2wsdl-options.adb
-	echo "      Parser.Add_Option (\"-I"$(INSTALL)"/AWS/include\");" \
+	echo "      Parser.Add_Option (\"-I"$(I_INC)"\");" \
 		>> ada2wsdl-options.adb
 	echo "   end Set_Default;" >> ada2wsdl-options.adb
 	echo "end Ada2WSDL.Options;" >> ada2wsdl-options.adb
