* regtests/makefile:   (ASIS_TESTS): Add wsdl_9 test.   (ASIS2_TESTS): Use new tail syntax to avoid a deprecated message.
* regtests/wsdl_9.adb, regtests/wsdl_9.ads,
  regtests/wsdl_9_main.adb regtests/wsdl_9_main.res:
  New test for the gSOAP interoperability.

* soap/soap-xml.adb:
  (Get_Ref): Generalize the code to check for XML references. The
   node name needs not to be using a specific name, only the id
   attribute is to be checked.
--
Improve gSOAP interoperability.
Fixes FB16-009.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -58,7 +58,7 @@ ifeq (${ASIS}, true)
 # Names must start with wsdl_ and be followed by a single digit between 0
 # and 9. Socket port is then 770<digit>.
 
-ASIS_TESTS   = wsdl_1 wsdl_2 wsdl_3 wsdl_4 wsdl_5 wsdl_6 wsdl_7 wsdl_8
+ASIS_TESTS   = wsdl_1 wsdl_2 wsdl_3 wsdl_4 wsdl_5 wsdl_6 wsdl_7 wsdl_8 wsdl_9
 ASIS2_TESTS  = wsdl_a wsdl_b register
 endif
 
@@ -201,7 +201,7 @@ $(ASIS2_TESTS): force
 	rm -f $@.res
 	echo "Running  " $@
 	$(ADA2WSDL) -v -f $@.ads -o $@.wsdl > tmp 2>&1
-	tail +3 tmp > $@.res
+	tail -n +3 tmp > $@.res
 	rm tmp
 	-diff -c -w $@.out $@.res 1>> alldifs 2>> alldifs
 
