Rework the way the non regressions tests are passed by default. Now by default all tests are passed separately. It is still possible to run tests as part of a single driver by setting TEST_MODE to Grouped on the main makefile. This is done in the hope that it will improve the run on some systems. During this work a set of clean-up has been done into regtests/makefile by removing code that was used before the migration to project files was done. Work for FB19-001.

--- a/makefile.conf
+++ b/makefile.conf
@@ -102,6 +102,7 @@ DLLTOOL	 	  = dlltool
 GCC               = gcc
 GCC_FOR_HOST      = gcc
 GNATMAKE	  = gnatmake
+GNATCLEAN	  = gnatclean
 GNATMAKE_FOR_HOST = gnatmake
 GREP		  = grep
 GZIP	 	  = gzip
