--- a/regtests/makefile
+++ b/regtests/makefile
@@ -32,6 +32,16 @@ ADA2WSDL = ../$(BDIR)/tools/ada2wsdl-main
 WSDL2AWS = ../$(BDIR)/tools/wsdl2aws
 AWSRES   = ../$(BDIR)/tools/awsres
 
+# Diff command
+
+OS = $(shell uname)
+
+ifeq ($(OS), SunOS)
+DIFF	=	diff -w
+else
+DIFF	=	diff -w -c
+endif
+
 # Test to be run in grouped mode
 
 ifeq (${TEST_MODE}, Grouped)
@@ -116,14 +126,14 @@ else
 endif
 	-for file in $(TOGETHER); do \
 	   if [ -f $$file.$(SOCKET).out ]; then \
-	      diff -w $$file.$(SOCKET).out $$file.res \
+	      $(DIFF) $$file.$(SOCKET).out $$file.res \
 		1>> alldifs 2>> alldifs; \
 	   else \
-	      diff -w $$file.out $$file.res 1>> alldifs 2>> alldifs; \
+	      $(DIFF) $$file.out $$file.res 1>> alldifs 2>> alldifs; \
 	   fi; \
 	done
 	cat alldifs
-	diff -w alldifs alldifs.out
+	$(DIFF) alldifs alldifs.out > /dev/null 2>&1
 
 init:
 	cp ../demos/cert.pem .
@@ -186,7 +196,7 @@ else
 endif
 	$(GNATCLEAN) -q -Pregtests -XTest_Mode=${TEST_MODE} \
 		-XBuild=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA} $@
-	-diff -w $@.out $@.res 1>> alldifs 2>> alldifs
+	-$(DIFF) $@.out $@.res 1>> alldifs 2>> alldifs
 
 $(PREP_WSDL_TESTS): force
 	echo Preparing $(@:%_prep=%)
@@ -199,7 +209,7 @@ $(PREP_WSDL_ATESTS): force
 $(WSDL2AWS_TESTS): force
 	echo "Running  " $@
 	-$(WSDL2AWS) -q -f -doc $@.wsdl > $@.res
-	-diff -w $@.out $@.res 1>> alldifs 2>> alldifs
+	-$(DIFF) $@.out $@.res 1>> alldifs 2>> alldifs
 
 $(ASIS_TESTS): force
 	echo Preparing $@
@@ -213,7 +223,7 @@ $(ASIS2_TESTS): force
 	$(ADA2WSDL) -v -f $@.ads -o $@.wsdl > tmp 2>&1
 	tail -n +3 tmp > $@.res
 	rm tmp
-	-diff -w $@.out $@.res 1>> alldifs 2>> alldifs
+	-$(DIFF) $@.out $@.res 1>> alldifs 2>> alldifs
 
 tres: force
 	echo "Compiling " $@
@@ -229,7 +239,7 @@ tres: force
 	cat tres-1.res tres-2.res > tres.res
 	$(GNATCLEAN) -q -Pregtests -XTest_Mode=${TEST_MODE} \
 		-XBuild=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA} $@
-	-diff -w tres.out tres.res 1>> alldifs 2>> alldifs
+	-$(DIFF) tres.out tres.res 1>> alldifs 2>> alldifs
 
 # As this check is really target dependent what we do is to run twice the same
 # program, each time with a different number of HTTP requests, then we compare
@@ -249,7 +259,7 @@ check_mem: force
 	grep "   Final" check_mem.run2 > run2
 	$(GNATCLEAN) -q -Pregtests -XTest_Mode=${TEST_MODE} \
 		-XBuild=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA} $@
-	-diff -w run1 run2 1>> alldifs 2>> alldifs
+	-$(DIFF) run1 run2 1>> alldifs 2>> alldifs
 
 setup:
 # Get MAIN and standard sources
