Move DIFF macro from regtests/makefile to makefile.conf.

--- a/makefile.conf
+++ b/makefile.conf
@@ -97,7 +97,6 @@ AR 		  = ar
 AWK               = awk
 CHMOD	 	  = chmod
 CP	 	  = cp -p
-DIFF	 	  = diff
 DLLTOOL	 	  = dlltool
 GCC               = gcc
 GCC_FOR_HOST      = gcc
@@ -114,3 +113,11 @@ TAR	 	  = tar
 WINDRES	 	  = windres
 CAT		  = cat
 STRIP		  = strip
+
+OS = $(shell uname)
+
+ifeq ($(OS), SunOS)
+DIFF	=	diff -w
+else
+DIFF	=	diff -w -c
+endif
