(OS): Renamed UNAME, as this is uname value. OS is already  set on Windows and used on the shared project file.

--- a/makefile.conf
+++ b/makefile.conf
@@ -114,9 +114,9 @@ WINDRES	 	  = windres
 CAT		  = cat
 STRIP		  = strip
 
-OS = $(shell uname)
+UNAME = $(shell uname)
 
-ifeq ($(OS), SunOS)
+ifeq ($(UNAME), SunOS)
 DIFF	=	diff -w
 else
 DIFF	=	diff -w -c
